(Trello ID: f0t34569) endpoint get UPs by categories created
